--- a/css/style.scss
+++ b/css/style.scss
@@ -241,7 +241,8 @@ body {
 .graph {
   position: relative;
   width: 59%;
-  max-width: 1004px;
+	max-width: 1004px;
+	min-width: 500px;
   background-color: rgba(255, 255, 255, 0);
   margin-top: 0.5rem;
   transition: background 0.2s;
